; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/Documentation/networking/extr_ifenslave.c_set_slave_mtu.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/Documentation/networking/extr_ifenslave.c_set_slave_mtu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifreq = type { i32, i32 }

@IFNAMSIZ = common dso_local global i32 0, align 4
@skfd = common dso_local global i32 0, align 4
@SIOCSIFMTU = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@saved_errno = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [42 x i8] c"Slave '%s': Error: SIOCSIFMTU failed: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [28 x i8] c"Slave '%s': MTU set to %d.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @set_slave_mtu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_slave_mtu(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.ifreq, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %6, align 4
  %7 = load i32, i32* %4, align 4
  %8 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %5, i32 0, i32 0
  store i32 %7, i32* %8, align 4
  %9 = getelementptr inbounds %struct.ifreq, %struct.ifreq* %5, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load i8*, i8** %3, align 8
  %12 = load i32, i32* @IFNAMSIZ, align 4
  %13 = call i32 @strncpy(i32 %10, i8* %11, i32 %12)
  %14 = load i32, i32* @skfd, align 4
  %15 = load i32, i32* @SIOCSIFMTU, align 4
  %16 = call i32 @ioctl(i32 %14, i32 %15, %struct.ifreq* %5)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp slt i32 %17, 0
  br i1 %18, label %19, label %25

19:                                               ; preds = %2
  %20 = load i32, i32* @errno, align 4
  store i32 %20, i32* @saved_errno, align 4
  %21 = load i8*, i8** %3, align 8
  %22 = load i32, i32* @saved_errno, align 4
  %23 = call i32 @strerror(i32 %22)
  %24 = call i32 @v_print(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i8* %21, i32 %23)
  br label %29

25:                                               ; preds = %2
  %26 = load i8*, i8** %3, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i32 @v_print(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i8* %26, i32 %27)
  br label %29

29:                                               ; preds = %25, %19
  %30 = load i32, i32* %6, align 4
  ret i32 %30
}

declare dso_local i32 @strncpy(i32, i8*, i32) #1

declare dso_local i32 @ioctl(i32, i32, %struct.ifreq*) #1

declare dso_local i32 @v_print(i8*, i8*, i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
